# CocktailBerry

./: .git-blame-ignore-revs  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .sonarcloud.properties  AGENTS.md  ANALYSIS_SUMMARY.md  CALIBRATION_BUG_REPORT.md  CNAME  CONTEXT.md  CONTRIBUTING.md  Cocktail_database.db  Cocktail_database_default.db  Cocktailmanager_2.py  Cocktailmanager_2.ui  Datenbank.db  IMPLEMENTATION_SUMMARY.md  LICENSE  README_START_HERE.md  Rezepte_export.csv  Zutaten_export.csv  api.py  bottles.py  bottlewindow.py  bottlewindow.ui  changelog.txt  clickablelineedit.py  cocktail.desktop  cocktail_data_de.db  cocktail_data_en.db  demo_union_type.py  docker-compose.yml  globals.py  helperfunctions.py  incredients.py  index.html  ingredients.py  (+21 more)
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md
.github/scripts/: validate_translation.py
.github/workflows/: build-docker.yml  build-react.yml  code-check.yml  deploy-pages.yml  labels.yml  link-check.yml  linting.yml  manual-docker-build.yml  pr-labels.yml  prepare-release.yml  release-build.yml  (+8 more)
agents/: domain.md  triage-labels.md
assets/: VirtualKeyboard-BGKsaeXk.js  VirtualKeyboard-C-9dFEEq.js  VirtualKeyboard-C2EiKCyZ.js  VirtualKeyboard-CCLjEB0Y.js  VirtualKeyboard-CYk6Tqn8.css  VirtualKeyboard-DeRZ34Pf.js  VirtualKeyboard-DiTxFsb_.css  VirtualKeyboard-M8NrA0IW.css  VirtualKeyboard-Y4_4nHbl.js  index--Z_oXiaL.js  index-6275loyY.js  index-6q5Qy3YP.js  index-8QGxf9uQ.js  index-B0vQne5C.js  index-BA2FYmCy.css  index-BIozZzpc.css  index-BK3gmxy6.js  index-BQKdBqEs.js  index-BUAWVPfT.js  index-BbB7k5kL.js  index-BdW1gf63.js  index-Bh2Gr8r4.css  index-BmkIqZI9.js  index-BnNehbXN.js  index-BpjXa002.js  index-BtU5b-Am.css  index-BxszdjOK.js  index-C1bArbhz.css  index-C5ZrOEL9.css  index-C7tprJxk.css  index-CEB1Xiea.js  index-CEvE7Y0U.js  index-CIsBXGh6.css  index-CJUVmKbX.css  index-CMCiET4a.js  index-CO2an9Zs.js  index-CZKDnA3j.js  index-CZLnWNA0.js  index-CmyFOFPf.js  index-Cp7t2n8w.js  (+28 more)
calibration/: Calibration.ui  calibration.py
config/: config_manager.py
dashboard/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.both.yaml  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
dashboard/backend/: Dockerfile  db_controller.py  main.py  models.py  requirements.txt
dashboard/frontend/: Dockerfile  app.py  callbacks.py  index.py  language.py  language.yaml  main.py  requirements.txt  store.py  treemap.py
dashboard/frontend/assets/: styles.css
dashboard/qt-app/: .language.env  home.py  html_template.py  index.py  language.yaml  main.py  mainwindow.py  mainwindow.ui  requirements.txt  setup_leaderboard.py  treemap.py  waffle.py
dashboard/qt-app/assets/: styles.css
docs/: .devnotes.md  I2C_IMPLEMENTATION_SUMMARY.md  about.md  addons.md  advanced.md  changelog.txt  commands.md  developement.md  development.md  devnotes.md  dynamic-config-implementation.md  faq.md  features.md  hardware-extensions.md  hardware.md  hybrid-gpio-i2c-config.md  i2c_setup.md  index.md  installation.md  languages.md  nfc.md  payment.md  quickstart.md  requirements.txt  setup.md  support.md  troubleshooting.md  union_type_config.md  waiter.md  web.md
microservice/: .dockerignore  .env.example  Dockerfile  README.md  app.py  database.py  docker-compose.local.yaml  email_sender.py  helper.py  models.py  pyproject.toml  querry_sender.py  query_sender.py  requirements.txt
scripts/: 99-gpio.rules  all_in_one.sh  cocktail.desktop  cocktail_web.desktop  cocktailberry_web_client  compile_ui_to_python.ps1  create_english_db.py  dependency_installer.sh  install_compose.sh  install_docker.sh  launcher.sh  localize_database.py  ms-docker-compose.yaml  setup.sh  setup_gpio_permissions.service  setup_gpio_permissions.sh  setup_non_rpi.sh  setup_usb_nfc.sh  v1-launcher.sh  v2-launcher.sh
src/: __init__.py  asyncworker.py  bottles.py  calibration.py  config_manager.py  data_utils.py  database_commander.py  db_models.py  dialog_handler.py  display_controler.py  display_controller.py  display_handler.py  error_handler.py  error_suppression.py  filepath.py  hand_add_assist.py  image_utils.py  ingredients.py  language.yaml  logger_handler.py  maker.py  migrator.py  models.py  payment_utils.py  python_vcheck.py  recipes.py  resource_stats.py  rpi_controller.py  save_handler.py  service_handler.py  shared.py  startup_checks.py  supporter.py  updater.py  utils.py
src_ui/: setup_avialable_window.py  setup_bottle_window.py  setup_custom_dialog.py  setup_get_ingredients_window.py  setup_handadd_widget.py  setup_keyboard_widget.py  setup_mainwindow.py  setup_password_screen.py  setup_progress_screen.py  setup_team_window.py  setupui.py
tests/: conftest.py  test_calibration.py  test_config_api.py  test_config_manager.py  test_config_types.py  test_config_union_type.py  test_database_commander.py  test_export_data.py  test_hand_add_assist.py  test_hand_add_flow.py  test_hardware_extensions.py  test_hybrid_controller.py  test_i2c_controller.py  test_image_utils.py  test_launcher_switch.py  test_led_effect_end.py  test_logger_handler.py  test_machine_controller.py  test_models.py  test_nfc_payment_service.py  test_payment_utils.py  test_selection.py  test_stepper_dispenser.py  test_user_lookup.py  test_wsled_cleanup.py
ui_elements/: Cocktailmanager_2.py  Cocktailmanager_2.ui  Keyboard.py  Keyboard.ui  available.py  available.ui  bonusingredient.py  bonusingredient.ui  bottlewindow.py  bottlewindow.ui  clickablelineedit.py  customdialog.py  customdialog.ui  handadds.py  handadds.ui  passwordbuttons.ui  passwordbuttons2.py  passwordbuttons2.ui  progressbarwindow.py  progressbarwindow.ui  scaleabletab.py  teamselection.py  teamselection.ui
web_client/: .env.demo  .env.development  .gitignore  .npmrc  .yarnrc.yml  README.md  biome.json  env.production  global.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+507 files in other folders)
