[project]
name = "CocktailBerry"
version = "2.2.1"
description = "A Python and Qt based App for a Cocktail Machine on a Raspberry Pi. Easily serve Cocktails with Raspberry Pi and Python"
authors = [{ name= "Andre Wohnsland" , email =  "cocktailmakeraw@gmail.com" }]
readme = "readme.md"

dependencies = [
    "gitpython>=3.1.43",
    "requests>=2.32.3",
    "pyyaml>=6.0.1",
    "typer>=0.12.3",
    "pyfiglet>=1.0.2",
    "piicodev>=1.10.0",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "distro>=1.9.0",
    "fastapi[standard]>=0.115.2",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.3",
    "mfrc522>=0.0.7 ; sys_platform == 'linux'",
    "rpi-ws281x>=5.0.0 ; sys_platform == 'linux'",
    "gpiozero>=2.0.1 ; sys_platform == 'linux'",
    "python-periphery>=2.4.1",
    "sqlalchemy>=2.0.38",
    "alembic>=1.14.1",
]
requires-python = ">= 3.9"

[project.optional-dependencies]
v1 = [
    "qtsass>=0.4.0",
    "pyqt5==5.15.7",
    "pyqt5-qt5==5.15.2",
    "pyqtspinner>=2.0.0",
    "qtawesome>=1.3.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "mypy>=1.15.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.2.0",
]
# This is a workaround for the missing support of aarch64 in pyqt5, need to install this over apt +
# include this with system site packages
override-dependencies = [
    "pyqt5-qt5; sys_platform != 'linux' and platform_machine != 'aarch64'",
    "pyqt5; sys_platform != 'linux' and platform_machine != 'aarch64'"
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]

[tool.uv.workspace]
members = ["dashboard", "microservice"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "addon_skeleton.py"]
target-version = "py39"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
  ]
per-file-ignores = { "runme.py" = ["E402"], "migrator.py" = ["E402"], "api.py" = ["E402"] }
select = [
  "C", # Convention
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "R", # Refactor
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.mypy]
disable_error_code = ["annotation-unchecked", "import-untyped"]

[tool.pylint]
disable = ["C0301", "C0114", "C0115", "C0116", "R0912"]
max-line-length = 120
extension-pkg-whitelist= ["PyQt5"]

[tool.autopep8]
max-line-length = 120
ignore = ["E402"]
