[project]
name = "CocktailBerry"
version = "3.2.0"
description = "A Python and Qt based App for a Cocktail Machine on a Raspberry Pi. Easily serve Cocktails with Raspberry Pi and Python"
authors = [{ name= "Andre Wohnsland" , email =  "cocktailmakeraw@gmail.com" }]
readme = "readme.md"
requires-python = ">= 3.13"

dependencies = [
    "gitpython>=3.1.46",
    "requests>=2.32.5",
    "sumup>=0.0.22",
    "pyyaml>=6.0.3",
    "typer>=0.24.0",
    "pyfiglet>=1.0.4",
    "pillow>=12.1.1",
    "psutil>=6.0.0",
    "distro>=1.9.0",
    "fastapi[standard]>=0.129.0",
    "uvicorn>=0.41.0",
    "sse-starlette>=3.2.0",
    "mfrc522>=0.0.7 ; sys_platform == 'linux'",
    "rpi-ws281x>=5.0.0 ; sys_platform == 'linux'",
    "gpiozero>=2.0.1 ; sys_platform == 'linux'",
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
    "python-periphery>=2.4.1",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.4",
    "pulp>=3.3.0",
    "stamina>=25.2.0",
    "adafruit-circuitpython-mcp230xx>=2.5.19",
    "adafruit-circuitpython-pcf8574>=1.0.15",
    "adafruit-circuitpython-busdevice>=5.2.15",
]

[dependency-groups]
dev = [
  "mkdocs-material>=9.5.49",
  "mkdocs>=1.6.1",
  "ipykernel>=6.29.5",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.2.0",
  "ty==0.0.16",
  "ruff>=0.15.1",
]

[project.optional-dependencies]
v1 = [
    "pyqt6>=6.10.1",
    "pyqtwaitingspinner>=1.2.6",
    "qtawesome>=1.4.0",
    "qtsass>=0.4.0",
]
nfc = [
  "pyscard>=2.3.1",
]

[tool.uv]
override-dependencies = [
    "pyqt6-qt6; sys_platform != 'linux' or python_version >= '3.12'",
    "pyqt6; sys_platform != 'linux' or python_version >= '3.12'"
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "addon_skeleton.py"]
target-version = "py313"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
]
per-file-ignores = {"runme.py" = ["E402"], "migrator.py" = ["E402"], "api.py" = ["E402"], "tests/*" = ["ANN201", "ANN202", "PLR2004"] }
select = [
  "A", # flake8-builtins
  "ANN", # Type annotations
  "C", # Convention
  "C4", # flake-comprehensions
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "FAST", # FastAPI
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "PIE", # flake8-pie
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "R", # Refactor
  "RET", # flake8-return
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "ANN401", # no Any for *args or **kwargs
  "PLR0913", # Too many arguments
  "PLC0415", # `import` should be at the top-level of a file
]

[[tool.ty.overrides]]
include  = ["src.ui_elements.*"]
rules = { unresolved-import = "ignore" }

[[tool.ty.overrides]]
include = [
  "src/machine/rfid.py",
  "src/machine/raspberry.py",
  "src/machine/leds.py",
]
rules = { unresolved-import = "ignore", invalid-type-form = "ignore", unresolved-attribute = "ignore", possibly-missing-attribute = "ignore" }
