[project]
name = "CocktailBerry"
version = "4.0.0"
description = "A Python and Qt based App for a Cocktail Machine on a Raspberry Pi. Easily serve Cocktails with Raspberry Pi and Python"
authors = [{ name= "Andre Wohnsland" , email =  "info@cocktailberry.org" }]
readme = "readme.md"
requires-python = ">= 3.13"

dependencies = [
    "gitpython>=3.1.46",
    "requests>=2.33.1",
    "sumup>=0.1.2",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "pyfiglet>=1.0.4",
    "pillow>=12.1.1",
    "psutil>=6.0.0",
    "distro>=1.9.0",
    "fastapi[standard]>=0.135.2",
    "uvicorn>=0.42.0",
    "sse-starlette>=3.3.4",
    "mfrc522>=0.0.7 ; sys_platform == 'linux'",
    "rpi-ws281x>=5.0.0 ; sys_platform == 'linux'",
    "gpiozero>=2.0.1 ; sys_platform == 'linux'",
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
    "python-periphery>=2.4.1",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.4",
    "pulp>=3.3.0",
    "stamina>=25.2.0",
    "adafruit-circuitpython-mcp230xx>=2.6.1",
    "adafruit-circuitpython-pcf8574>=1.0.16",
    "adafruit-circuitpython-busdevice>=5.2.16",
    "rpimotorlib>=4.0",
    "hx711>=1.1.2.3 ; sys_platform == 'linux'",
    "cedargrove-nau7802>=2.1.4 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
  "mkdocs-material>=9.7.6",
  "ipykernel>=7.2.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pre-commit>=4.5.1",
  "ty==0.0.32",
  "ruff>=0.15.12",
  "zensical>=0.0.36",
]

[project.optional-dependencies]
v1 = [
    "pyqt6>=6.10.1",
    "pyqtwaitingspinner>=1.2.6",
    "qtawesome>=1.4.1",
    "qtsass>=0.4.0",
]
nfc = [
  "pyscard>=2.3.1",
]

[tool.uv]
override-dependencies = [
    "pyqt6-qt6; sys_platform != 'linux' or python_version >= '3.12'",
    "pyqt6; sys_platform != 'linux' or python_version >= '3.12'"
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "src/skeletons"]
target-version = "py313"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
]
per-file-ignores = {"runme.py" = ["E402"], "migrator.py" = ["E402"], "api.py" = ["E402"], "tests/*" = ["ANN201", "ANN202", "PLR2004"] }
select = [
  "A", # flake8-builtins
  "ANN", # Type annotations
  "C", # Convention
  "C4", # flake-comprehensions
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "FAST", # FastAPI
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "PIE", # flake8-pie
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "R", # Refactor
  "RET", # flake8-return
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "ANN401", # no Any for *args or **kwargs
  "PLR0913", # Too many arguments
  "PLC0415", # `import` should be at the top-level of a file
]

[[tool.ty.overrides]]
include  = ["src.ui_elements.*"]
rules = { unresolved-import = "ignore" }

[[tool.ty.overrides]]
include = [
  "src/machine/rfid.py",
  "src/machine/raspberry.py",
  "src/machine/leds.py",
  "src/machine/dispensers/stepper.py",
  "src/machine/scale/hx711.py",
  "src/machine/scale/hx711_custom.py",
  "src/machine/scale/nau7802.py",
]
rules = { unresolved-import = "ignore", invalid-type-form = "ignore", unresolved-attribute = "ignore", possibly-missing-attribute = "ignore" }
