[project]
name = "dashboard"
version = "1.0.0"
description = "CocktailBerry Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.0.1",
    "pywaffle>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "uvicorn>=0.32.1",
]
