[project]
name = "dashboard"
version = "1.0.0"
description = "CocktailBerry Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
frontend = [
    "dash>=4.1.0",
    "gunicorn>=26.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pywaffle>=1.1.1",
    "requests>=2.33.1",
    "scipy>=1.17.0",
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]
