[project]
name = "microservice"
version = "1.0.0"
description = "Microservice for CocktailBerry"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]