[project]
name = "microservice"
version = "1.0.0"
description = "Microservice for CocktailBerry"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.python.org/simple",
    "https://www.piwheels.org/simple"
]
